infra_2/staging/ec2_instance/.terragrunt-cache/kXkx2FK3ZI4b0Vync-gz2RiTUmY/3990iAflRgjdgHjqW7cox1oUHAo/securitygroup.tf
resource "aws_security_group" "this" {
  name        = "${var.env}-securitygroup"
  description = "Allow inbound SSH & HTTP and outbound traffic"
  vpc_id      = var.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = ["110.226.124.147/32"]
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
